[gd_scene load_steps=5 format=2]

[ext_resource path="res://graphics/themes/wesnoth_theme.tres" type="Theme" id=1]
[ext_resource path="res://source/interface/pause_menu/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://source/interface/menus/components/Panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/interface/pause_menu/PauseButton.tscn" type="PackedScene" id=4]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" parent="." instance=ExtResource( 3 )]
mouse_filter = 0

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 300 )
theme = ExtResource( 1 )
popup_exclusive = true

[node name="CenterContainer" type="CenterContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/CenterContainer"]
margin_left = 31.0
margin_top = 66.0
margin_right = 269.0
margin_bottom = 234.0
rect_min_size = Vector2( 120, 0 )

[node name="Resume" parent="Popup/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 238.0
margin_bottom = 80.0

[node name="Quit" parent="Popup/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 88.0
margin_right = 238.0
margin_bottom = 168.0

[node name="Pause" parent="." instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = 248.0
margin_bottom = -10.0
rect_min_size = Vector2( 238, 50 )
[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
